<resources>
    <string name="app_name">ThirdPartyModule</string>

    <string name="third_party_login">第三方登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="qq_login">QQ 登录</string>
    <string name="weibo_login">微博登录</string>

    <string name="share">分享</string>
    <string name="wechat_share">微信分享</string>
    <string name="qq_share">QQ 分享</string>
    <string name="weibo_share">微博分享</string>

    <string name="weibosdk_demo_share_text_template">我正在使用微博客户端发博器分享文字</string>

    <string name="success">分享成功</string>
    <string name="fail">分享失败</string>
    <string name="cancel">分享取消</string>
    <string name="text">午读 | 做交易，知识和逻辑缺一不可 #金十数据#
        https://news.jin10.com/details.html?id=14741</string>

    <string name="register_to_wechat">第三方应用注册到微信</string>
    <string name="goto_wechat">第三方应用跳转到微信发送消息页面</string>
    <string name="launch_wechat">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送朋友圈</string>
    <string name="scan_qr_code_login">扫码登录</string>

    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>

    <string name="target_scene">目标场景</string>
    <string name="target_scene_session">会话</string>
    <string name="target_scene_timeline">朋友圈</string>
    <string name="target_scene_favorite">收藏</string>
    <string name="send_text">发送文本</string>

    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <!-- <item>发送图片的URL</item> -->
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>

    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>

    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>

    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appbrand">发送小程序</string>
    <string-array name="send_appbrand_item">
        <item>发送小程序</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>

    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>

    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>

    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>

    <string name="share_image_success">微信分享图片成功</string>
    <string name="share_image_fail">微信分享图片失败</string>
    <string name="not_exist_pic">图片不存在</string>

    <string name="scan_qrcode_login">扫码登录</string>
    <string name="auth">微信登录</string>
    <string name="cancel_auth">取消登录</string>
</resources>
