<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/target_scene"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/target_scene_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/grey"
                android:text="@string/target_scene_session"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/target_scene_timeline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/target_scene_timeline"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/target_scene_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/target_scene_favorite"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

        <Button
            android:id="@+id/send_text"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_text"/>

        <Button
            android:id="@+id/send_img"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_img"/>

        <Button
            android:id="@+id/send_music"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_music"/>

        <Button
            android:id="@+id/send_video"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_video"/>

        <Button
            android:id="@+id/send_webpage"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_webpage"/>

        <Button
            android:id="@+id/send_appbrand"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_appbrand"/>

        <Button
            android:id="@+id/send_appdata"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_appdata"/>

        <Button
            android:id="@+id/send_emoji"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/send_emoji"/>

        <Button
            android:id="@+id/get_token"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/get_token_from_weixin"/>

        <Button
            android:id="@+id/unregister"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/unregister_from_weixin"/>
    </LinearLayout>
</ScrollView>