<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_register"
        style="@style/Button"
        android:text="@string/register_to_wechat"/>

    <Button
        android:id="@+id/btn_goto"
        style="@style/Button"
        android:text="@string/goto_wechat"/>

    <Button
        android:id="@+id/btn_launch"
        style="@style/Button"
        android:text="@string/launch_wechat"/>

    <Button
        android:id="@+id/btn_check_timeline_supported"
        style="@style/Button"
        android:text="@string/check_timeline_supported"/>

    <Button
        android:id="@+id/btn_scan_qr_code_login"
        style="@style/Button"
        android:text="@string/scan_qr_code_login"/>
</LinearLayout>