<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_wechat_share"
        android:text="@string/wechat_share"
        style="@style/Button"/>

    <Button
        android:id="@+id/btn_qq_share"
        style="@style/Button"
        android:text="@string/qq_share"/>

    <Button
        android:id="@+id/btn_weibo_share"
        style="@style/Button"
        android:text="@string/weibo_share"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>